Canonical Repository Convergence and Production Rebuild Sprint (UCCIS Phase IV – Mandatory Repository Correction)/deployment/kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: uccis-mongo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: uccis-mongo

  template:
    metadata:
      labels:
        app: uccis-mongo

    spec:
      containers:
        - name: mongo

          image: mongo:7

          ports:
            - containerPort: 27017
